# traccc

./: CMakeLists.txt  CMakePresets.json
benchmarks/cpu/: toy_detector_cpu.cpp
benchmarks/cuda/: toy_detector_cuda.cpp
core/: CMakeLists.txt
core/src/: full_chain_algorithm.cpp
device/alpaka/: CMakeLists.txt
device/common/: CMakeLists.txt
device/cuda/: CMakeLists.txt
device/sycl/: CMakeLists.txt
examples/cpu/: seq_example.cpp  seq_single_module.cpp
examples/io/: create_binaries.cpp
examples/run/: CMakeLists.txt
examples/run/alpaka/: CMakeLists.txt  full_chain_algorithm.cpp  full_chain_algorithm.hpp  seeding_example_alpaka.cpp  seq_example_alpaka.cpp
examples/run/common/: seq_example.cpp  seq_example.hpp  throughput_mt.ipp  throughput_st.ipp
examples/run/cpu/: CMakeLists.txt  ccl_example.cpp  full_chain_algorithm.cpp  full_chain_algorithm.hpp  misaligned_truth_fitting_example.cpp  seeding_example.cpp  seq_example.cpp  throughput_mt.cpp  throughput_st.cpp  truth_finding_example.cpp  truth_fitting_example.cpp
examples/run/cuda/: CMakeLists.txt  full_chain_algorithm.cpp  full_chain_algorithm.hpp  seeding_example_cuda.cpp  seq_example_cuda.cpp  throughput_mt.cpp  throughput_st.cpp  truth_finding_example_cuda.cpp  truth_fitting_example_cuda.cpp
examples/run/kokkos/: seeding_example_kokkos.cpp
examples/run/openmp/: par_example.cpp
examples/run/sycl/: CMakeLists.txt  full_chain_algorithm.hpp  full_chain_algorithm.sycl  seeding_example_sycl.sycl  seq_example_sycl.sycl  throughput_mt.cpp  throughput_st.cpp
io/: CMakeLists.txt
io/src/: mapper.cpp  read.cpp  read_cells.cpp  read_geometry.cpp  read_measurements.cpp  read_particles.cpp  read_spacepoints.cpp  write.cpp
performance/: CMakeLists.txt
tests/algorithms/: component_connection_tests.cpp
tests/alpaka/: CMakeLists.txt
tests/cpu/: compare_with_acts_seeding.cpp  seq_single_module.cpp  test_ambiguity_resolution.cpp  test_cca.cpp  test_ckf_combinatorics_telescope.cpp  test_ckf_sparse_tracks_telescope.cpp  test_clusterization_resolution.cpp  test_kalman_fitter_hole_count.cpp  test_kalman_fitter_momentum_resolution.cpp  test_kalman_fitter_telescope.cpp  test_kalman_fitter_wire_chamber.cpp  (+3 more)
(+289 files in other folders)
